bin_PROGRAMS = pullseq seqdiff
pullseq_SOURCES = file_read.c file_read.h global.h hash.c hash.h kseq.h output.c output.h pull_by_name.c pull_by_name.h pull_by_size.c pull_by_size.h pullseq.c pullseq.h uthash.h
#pullseq_LDADD = @ZLIB@

seqdiff_SOURCES = cmpseq.c cmpseq.h file_read.c file_read.h global.h hash.c hash.h kseq.h seqdiff.c seqdiff.h seqdiff_results.h seqdiff_results.c uthash.h
