bin_PROGRAMS = pullseq seqdiff
pullseq_SOURCES = global.h global.h  uthash.h hash.c hash.h kseq.h output.c output.h \
									size_filter.c size_filter.h search_header.c search_header.h \
									file_read.c file_read.h \
									pull_by_re.c pull_by_re.h pull_by_name.c pull_by_name.h \
									pull_by_size.c pull_by_size.h pullseq.c pullseq.h \
									fmemopen.c fmemopen.h
									
#pullseq_LDADD = @ZLIB@

seqdiff_SOURCES = cmpseq.c cmpseq.h file_read.c file_read.h global.h hash.c hash.h kseq.h seqdiff.c seqdiff.h seqdiff_results.h seqdiff_results.c uthash.h output.c output.h
